--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
     "sirv-cli": "^2.0.0"
   }
 }
